feat: configuring the Database

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
@@ -16,6 +20,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "7.1.*",
+        "symfony/maker-bundle": "^1.61",
         "symfony/monolog-bundle": "^3.0",
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*"
