--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 /.idea/
 ###< symfony/framework-bundle ###
 /.idea/codeception.xml
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
