--- a/.env
+++ b/.env
@@ -28,3 +28,7 @@ APP_SECRET=93ff1d5de99fcb141e77405b5dc7ffd1
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://localhost:9200/
+###< friendsofsymfony/elastica-bundle ###
