--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
-    container_name: elasticsearch
+    container_name: candidate_recruitment_system_elasticsearch
     restart: always
     environment:
       - xpack.security.enabled=false
