--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
+        "fos-router": "file:vendor/friendsofsymfony/jsrouting-bundle/Resources",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.78.0",
         "sass-loader": "^14.0.0",
