--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "^4.12",
         "friendsofsymfony/elastica-bundle": "^6.4",
         "friendsofsymfony/jsrouting-bundle": "^3.5",
         "knplabs/knp-paginator-bundle": "^6.5",
@@ -23,7 +24,8 @@
         "symfony/security-bundle": "7.1.*",
         "symfony/stimulus-bundle": "^2.19",
         "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/yaml": "7.1.*"
+        "symfony/yaml": "7.1.*",
+        "symfonycasts/verify-email-bundle": "^1.17"
     },
     "require-dev": {
         "symfony/debug-bundle": "7.1.*",
