feat: Candidate entity with crud and form; update README.md

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=93ff1d5de99fcb141e77405b5dc7ffd1
 ###< symfony/framework-bundle ###
 
